# RadioRouting

./: .gitignore  CMakeLists.txt
ardusketch/: ardusketch.ino  controller.cpp  controller.hh  factorys.cpp  factorys.hh  handlers.cpp  handlers.hh  protocol.cpp  protocol.hh
ardusketch/main/: main.ino  protocol.cpp  protocol.hpp
core/: main.c  protocol.c  protocol.h
core/protocol/: protocol.c  protocol.h
core/protocol/controller/: controller.c  controller.h
core/protocol/factorys/: factorys.c  factorys.h
core/protocol/handlers/: handlers.c  handlers.h
docs/: readme.txt  ~$атусы устройства.docx  ~$исание протокола.docx  Архитектура проекта.docx  Архитектура проекта.vsdx  Дорожная карта.docx  Идеи по оптимизации и расширению функционала.txt  Описание протокола.docx  Отчёт по ходу выполения работ.docx  Пакеты протокола.xlsx  Статусы устройства.docx
tests/: paxample.h  showme.h
tests/source/: showme.c
